# nexflow-hermes

./: .env.template  .gitignore  ARCHITECTURE.md  Coding ByLaws Rulebook.md  NEXFLOW_CONTEXT.md  NXFX01_V2_PIPELINE_DIAGRAM.md  NXFX01_V2_SCORING_SPEC.md  PROPOSAL.md  agents.md  config.yaml  cron-jobs.yaml  dex_swaps_backfill.py  graph.py  hermes_strategy_config.py  orchestrator.py  setup-hermes.sh  tmp_check_events.sh  tmp_check_fifo.py  tmp_verify.sh  wallet_perf_backfill.py
hermes/: package-lock.json  package.json  tsconfig.json
hermes/src/: index.ts
hermes/src/core/: llm.ts  policies.ts  state.ts  tools.ts
hermes/src/graphs/: agentNodes.ts  base.ts  toolNode.ts
hermes/src/jobs/: runner.ts
hermes/src/services/: ml-client.ts  nxfx01-client.ts  walletintel-client.ts
hyperliquid-agent/: .env.template  .gitignore  pyproject.toml  strategy_config.yaml
hyperliquid-agent/scripts/: setup_env.sh  start.sh
hyperliquid-agent/src/: config.py  main.py
hyperliquid-agent/src/acp/: degen_claw.py
hyperliquid-agent/src/execution/: executor.py
hyperliquid-agent/src/market/: data_feed.py
hyperliquid-agent/src/notifications/: telegram.py
hyperliquid-agent/src/risk/: constraints.py  supervisor.py
hyperliquid-agent/src/skill/: functions.py
hyperliquid-agent/src/state/: persistence.py  portfolio.py
hyperliquid-agent/src/strategy/: base.py  funding_carry.py  momentum.py  regime.py  rwa.py  smart_money.py
hyperliquid-agent/tests/: test_constraints.py  test_funding_carry.py  test_hardening.py  test_metrics.py  test_regime.py
mcp-base-chain/: README.md  pyproject.toml
mcp-base-chain/src/: cache.py  server.py
mcp-base-chain/src/providers/: alchemy.py  bitquery.py
mcp-base-chain/src/tools/: contract_analyzer.py  pool_events.py  trend_detection.py  wallet_monitor.py
mcp-basescan/: package-lock.json  package.json  tsconfig.json
mcp-basescan/src/: config.ts  etherscanClient.ts  fifoMetrics.ts  server.ts
mcp-nexflow/: README.md  pyproject.toml
mcp-nexflow/src/: client.py  server.py
mcp-nexflow/src/tools/: agent_stats.py  pulse.py  smf.py
mcp-nxfx01/: README.md  pyproject.toml
mcp-nxfx01/src/: client.py  server.py
migrations/: 001_nxfx01_schema.sql  002_fixup_shadow_wallet.sql  003_launch_alerts.sql  004_launchpad_trust_level.sql  005_unique_token_address.sql  006_dex_source.sql  007_v2_scoring_upgrade.sql  008_v2_1_mempool_major_interest.sql
nexflow-bullmq/: README.md  package-lock.json  package.json  queue-scheduler.ts  tsconfig.json
nxfx-shared/: pyproject.toml
nxfx-shared/src/: __init__.py  enums.py  nxfx01_payload.py  nxfx02_execution_plan.py  nxfx03_mempool_features.py  nxfx05_risk_limits.py
nxfx01-api/: pyproject.toml  start-scheduler.sh
nxfx01-api/config/: scoring_policy.yaml
nxfx01-api/src/: db.py  scheduler.py
nxfx01-api/src/api/: main.py  models.py
nxfx01-api/src/scoring/: __init__.py  data_confidence_scorer.py  derisk_engine.py  final_scorer.py  graph_risk_scorer.py  initial_scorer.py  liquidity_quality_scorer.py  major_interest.py  rug_risk_scorer.py  smart_money_scorer.py  social_quality_scorer.py  whale_behavior_scorer.py
nxfx01-api/src/workers/: behavior_updater.py  cex_labeler.py  contract_scanner.py  deployer_profiler.py  launch_scanner.py  mempool_watcher.py  outcome_tracker.py  wallet_profiler.py
nxfx02-engine/: pyproject.toml
nxfx02-engine/src/: __init__.py  engine.py
nxfx02-engine/tests/: test_engine.py
nxfx02_engine/: execution_manager.py  launchpads.py  models.py  realtime.py
nxfx03-mempool/: pyproject.toml
nxfx03-mempool/src/: __init__.py  aggregator.py
nxfx05-risk/: pyproject.toml
nxfx05-risk/src/: __init__.py  supervisor.py
skills/: chain_watcher.md  job_hunter.md  nxfx01_learner.md  nxfx01_orchestrator.md  nxfx01_planner.md  signal_publisher.md
